--- a/index.html
+++ b/index.html
@@ -35,27 +35,11 @@
       rel="stylesheet"
       href="https://unpkg.com/kursor/dist/kursor.css"
     />
-    <!-- <link
-      rel="stylesheet"
-      href="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.css"
-    />
-
-    <script src="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.js"></script> -->
     <link rel="stylesheet" href="./dist/output.css" />
     <title>Gambit Rojo</title>
   </head>
 
   <body>
-    <!-- Custom cursor -->
-    <!-- <div
-      id="cursor1"
-      class="cursor1 hidden xl:block fixed w-[14px] h-[14px] rounded-full translate-x-[-50%] translate-y-[-50%] pointer-events-none z-[10000]"
-    ></div>
-    <div
-      id="cursor2"
-      class="hidden xl:block fixed w-[52px] h-[52px] border-[#258287] border rounded-full translate-x-[-50%] translate-y-[-50%] duration-700 ease-out bg-transparent z-50 pointer-events-none"
-    ></div> -->
-
     <div class="relative w-full">
       <div
         class="absolute w-[300px] h-[300px] xl:w-[600px] 2xl:w-[1000px] 2xl:h-[1000px] xl:h-[600px] bg-blue-800 z-[-1] top-[0%] left-[0%] -translate-x-[50%] -translate-y-[50%] rounded-full blur-[180px] opacity-[1]"
@@ -122,6 +106,13 @@
               </li>
               <li>
                 <a
+                  href="/about-us.html"
+                  class="block py-2 pl-3 pr-4 font-normal text-white rounded md:border-0 md:p-0 cursor-none"
+                  >About Us</a
+                >
+              </li>
+              <li>
+                <a
                   href="/expertise.html"
                   class="block py-2 pl-3 pr-4 font-normal text-white rounded md:border-0 md:p-0 cursor-none"
                   >Expertise</a
@@ -157,10 +148,10 @@
             <h1
               class="hero-item font-inter font-semibold text-white text-[22px] sm:text-[68px] xl:text-[64px] 2xl:text-[82px] leading-[1.2] drop-shadow-lg mb-[-10px] xl:mb-[-50px] mt-[-82px] xl:mt-[-72px]"
             >
-              Creating Captivating<br />Immersive Narratives with
+              Creating Captivating<br />Narratives with
             </h1>
             <h1
-              class="whitespace-nowrap hero-item2 text-bg font-outfit font-black text-6xl sm:text-[96px] xl:text-[180px] 2xl:text-[224px] leading-normal text-transparent bg-clip-text bg-[length:120%_120%] bg-[url('https://images.unsplash.com/photo-1561211919-1947abbbb35b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=871&q=80')] relative overflow-visible drop-shadow-lg"
+              class="whitespace-nowrap hero-item2 text-bg font-outfit font-black text-6xl sm:text-[96px] xl:text-[180px] 2xl:text-[224px] leading-normal text-transparent bg-clip-text bg-[length:120%_120%] bg-[url('/src/assets/images/text-bg.jpg')] relative overflow-visible drop-shadow-lg"
             >
               Technology
             </h1>
@@ -179,12 +170,8 @@
                 <p
                   class="font-inter font-light text-white text-lg xl:text-[2vw]"
                 >
-                · Social media management
-                · Digital advertising
-                · Branding strategy
-                · Website development
-                · App development
-                · Brand activation
+                  "Nature does not hurry, yet everything is
+                  accomplished." - Lao Tzu.
                 </p>
               </div>
               <div
@@ -193,12 +180,8 @@
                 <p
                   class="font-inter font-light text-white text-lg xl:text-[2vw] mx-2"
                 >
-                · Social media management
-                · Digital advertising
-                · Branding strategy
-                · Website development
-                · App development
-                · Brand activation
+                  "Nature does not hurry, yet everything is
+                  accomplished." - Lao Tzu.
                 </p>
               </div>
             </div>
@@ -246,10 +229,10 @@
           <p
             class="text-2xl font-light text-white font-inter text-left xl:w-[70%]"
           >
-            Branding agency based on South Jakarta. Here`s Gambit
-            Rojo, we are a bunch of innovators and digital marketers
-            enthusiast who gladly handle your brand. We believe that
-            every brand is unique and has a different identity.
+            Here`s Gambit Rojo, we are a bunch of innovators and
+            digital marketers enthusiast who gladly handle your brand.
+            We believe that every brand is unique and has a different
+            identity.
           </p>
         </div>
       </div>
@@ -258,7 +241,7 @@
     <!-- About 2 goes here -->
     <div class="relative overflow-visible">
       <div
-        class="w-full mx-auto container bg-[#1C1D20] rellax mb-[650px] xl:mb-48 relative"
+        class="w-full mx-auto container bg-[#1C1D20] rellax mb-[650px] xl:mb-[250px] relative"
         data-rellax-xs-speed="3"
         data-rellax-mobile-speed="3"
         data-rellax-desktop-speed="10"
@@ -267,44 +250,45 @@
           class="absolute w-[300px] h-[300px] xl:w-[500px] 2xl:w-[400px] 2xl:h-[400px] xl:h-[500px] bg-blue-600 z-[-1] top-[100%] left-0 sm:left-[25%] -translate-x-[50%] -translate-y-[50%] rounded-full blur-[156px] opacity-[1] animate-pulse"
         ></div>
         <div
-          class="absolute w-[250px] h-[250px] xl:w-[300px] 2xl:w-[300px] 2xl:h-[300px] xl:h-[300px] bg-[#00B0FF] z-[-1] top-[350%] sm:top-[250%] right-[0%] -translate-y-[50%] rounded-full blur-[96px] opacity-[1] animate-pulse2"
+          class="absolute w-[250px] h-[250px] xl:w-[300px] 2xl:w-[300px] 2xl:h-[300px] xl:h-[300px] bg-[#00B0FF] z-[-1] top-[210%] sm:top-[250%] right-[0%] -translate-y-[50%] rounded-full blur-[96px] opacity-[1] animate-pulse2"
         ></div>
         <div
           class="px-5 xl:px-[300px] 2xl:px-[400px] w-full relative"
         >
           <div class="relative w-full pt-12">
             <h1
-              class="uppercase font-outfit font-semibold text-5xl xl:text-7xl text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] mt-16 mb-0 xl:mb-8 rellax z-[3]"
+              class="font-outfit font-semibold text-5xl xl:text-5xl text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] mt-16 mb-0 xl:mb-8 rellax z-[3] drop-shadow-lg"
               data-rellax-speed="2.5"
               data-rellax-mobile-speed="-3"
               data-rellax-desktop-speed="-1"
             >
-              About Us
+              Branding agency based on South Jakarta
             </h1>
             <p
-              class="w-[100%] font-inter text-3xl xl:text-4xl font-medium text-[#A7A7A7] leading-[1.5] mt-[20px] xl:mt-0 mb-24 rellax z-[3] absolute top-[250px]"
+              class="w-[100%] font-inter text-3xl xl:text-4xl font-medium text-[#A7A7A7] leading-[1.5] mt-[20px] xl:mt-0 mb-24 rellax z-[3] absolute top-[300px]"
               data-rellax-speed="3"
               data-rellax-mobile-speed="-8"
               data-rellax-desktop-speed="-3"
             >
-              At Gambit Rojo, we believe that
+              At Gambit Rojo, we are dedicated to creating
               <span
                 class="relative text-white whitespace-nowrap about-unique"
-                >a successful brand
+                >successful brands
               </span>
-              is like a well-executed
+              that are
               <span
                 class="relative text-white whitespace-nowrap about-unique"
-                >chess game</span
+                >carefully crafted</span
               >
-              — a harmonious blend of analysis, positioning, and
+              through a combination of thoughtful analysis, strategic
+              positioning, and
               <span
                 class="relative text-white whitespace-nowrap about-unique"
-                >creativity.</span
+                >limitless creativity.</span
               >
             </p>
             <div
-              class="flex items-center gap-3 rellax absolute bottom-[-510px] xl:bottom-[-350px]"
+              class="flex items-center gap-3 rellax absolute bottom-[-620px] xl:bottom-[-400px]"
               data-rellax-speed="1"
               data-rellax-mobile-speed="3"
               data-rellax-desktop-speed="1"
@@ -322,10 +306,10 @@
             </div>
           </div>
           <div
-            class="absolute top-[150px] xl:top-[-50px] left-[20px] xl:left-[0px] z-[-1]"
+            class="absolute top-[280px] xl:top-[0px] left-[20px] xl:left-[75px] z-[-1] opacity-70"
           >
             <div
-              class="relative w-full overflow-hidden h-[175px] xl:h-[320px] 2xl:h-[420px] rellax"
+              class="relative w-full overflow-hidden h-[175px] xl:h-[240px] 2xl:h-[360px] rellax"
               data-rellax-speed="6"
               data-rellax-mobile-speed="5"
               data-rellax-desktop-speed="10"
@@ -341,10 +325,10 @@
             </div>
           </div>
           <div
-            class="absolute bottom-[-350px] xl:bottom-[-250px] 2xl:bottom-[-350px] right-[20px] xl:right-[0px] z-[-3]"
+            class="absolute bottom-[-350px] xl:bottom-[-250px] 2xl:bottom-[-350px] right-[20px] xl:right-[20px] z-[-3]"
           >
             <div
-              class="relative w-full overflow-hidden h-[125px] xl:h-[200px] 2xl:h-[250px] rellax"
+              class="relative w-full overflow-hidden h-[125px] xl:h-[170px] 2xl:h-[220px] rellax"
               data-rellax-speed="6"
               data-rellax-mobile-speed="10"
               data-rellax-desktop-speed="10"
@@ -379,7 +363,7 @@
       >
         <div class="w-full xl:w-[45%] block xl:flex items-center">
           <h1
-            class="text-5xl font-bold text-white font-outfit xl:text-6xl"
+            class="text-[42px] font-bold text-white font-outfit xl:text-6xl"
           >
             Understanding
           </h1>
@@ -434,14 +418,73 @@
       </div>
     </div>
 
-    <!-- Start a project -->
-    <section class="w-full mb-40 text-center">
-      <a
-        href="/about-you.html"
-        class="font-outfit font-bold text-6xl xl:text-[96px] text-transparent bg-clip-text bg-gradient-to-b from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] drop-shadow-lg bg-size-200 bg-pos-0 hover:bg-pos-100 transition-all duration-300 leading-normal"
-      >
-        Start<br />a<br />Project
-      </a>
+    <!-- Strategic ... -->
+    <section
+      class="overflow-hidden section-strategic w-full py-32 h-[200px] xl:h-[320px] relative bg-transparent mb-28"
+    >
+      <div class="absolute top-[0px] overflow-x-visible">
+        <div class="relative flex overflow-x-visible">
+          <div
+            class="z-0 animate-marquee3 whitespace-nowrap flex gap-[72px]"
+          >
+            <p class="uppercase font-inter">strategic moves</p>
+            <p class="uppercase font-inter">strategic moves</p>
+            <p class="uppercase font-inter">strategic moves</p>
+            <p class="uppercase font-inter">strategic moves</p>
+            <p class="uppercase font-inter">strategic moves</p>
+            <p class="uppercase font-inter">strategic moves</p>
+            <p class="uppercase font-inter">strategic moves</p>
+            <p class="uppercase font-inter">strategic moves</p>
+            <p class="uppercase font-inter">strategic moves</p>
+            <p class="uppercase font-inter">strategic moves</p>
+          </div>
+          <div
+            class="absolute top-0 z-0 animate-marquee4 whitespace-nowrap flex gap-[72px]"
+          >
+            <p class="uppercase font-inter">strategic moves</p>
+            <p class="uppercase font-inter">strategic moves</p>
+            <p class="uppercase font-inter">strategic moves</p>
+            <p class="uppercase font-inter">strategic moves</p>
+            <p class="uppercase font-inter">strategic moves</p>
+            <p class="uppercase font-inter">strategic moves</p>
+            <p class="uppercase font-inter">strategic moves</p>
+            <p class="uppercase font-inter">strategic moves</p>
+            <p class="uppercase font-inter">strategic moves</p>
+          </div>
+        </div>
+      </div>
+      <div class="absolute bottom-[0px] overflow-x-visible">
+        <div class="relative flex overflow-x-visible">
+          <div
+            class="z-0 animate-marquee5 whitespace-nowrap flex gap-[72px]"
+          >
+            <p class="uppercase font-inter">at your service</p>
+            <p class="uppercase font-inter">at your service</p>
+            <p class="uppercase font-inter">at your service</p>
+            <p class="uppercase font-inter">at your service</p>
+            <p class="uppercase font-inter">at your service</p>
+            <p class="uppercase font-inter">at your service</p>
+            <p class="uppercase font-inter">at your service</p>
+            <p class="uppercase font-inter">at your service</p>
+            <p class="uppercase font-inter">at your service</p>
+            <p class="uppercase font-inter">at your service</p>
+          </div>
+          <div
+            class="absolute top-0 z-0 animate-marquee6 whitespace-nowrap flex gap-[72px]"
+          >
+            <p class="uppercase font-inter">at your service</p>
+            <p class="uppercase font-inter">at your service</p>
+            <p class="uppercase font-inter">at your service</p>
+            <p class="uppercase font-inter">at your service</p>
+            <p class="uppercase font-inter">at your service</p>
+            <p class="uppercase font-inter">at your service</p>
+            <p class="uppercase font-inter">at your service</p>
+            <p class="uppercase font-inter">at your service</p>
+            <p class="uppercase font-inter">at your service</p>
+            <p class="uppercase font-inter">at your service</p>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!-- Footer goes here -->
@@ -526,18 +569,10 @@
     <!--End of Tawk.to Script-->
 
     <script src="https://cdn.jsdelivr.net/npm/kursor@0.0.14/dist/kursor.js"></script>
-    <script src="./src/js/cursor1.js"></script>
     <script src="./src/js/scrollreveal.js"></script>
     <script src="./src/js/navbar.js"></script>
-    <!-- <script src="./node_modules/flowbite/dist/flowbite.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.7.0/flowbite.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script>
-
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
-    <script src="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.js"></script>
-    <script>
-      var cursor = new MouseFollower();
-    </script> -->
 
     <script>
       var rellax = new Rellax('.rellax', {
