--- a/insight.html
+++ b/insight.html
@@ -40,15 +40,6 @@
   </head>
 
   <body>
-    <!-- Custom cursor -->
-    <!-- <div
-      id="cursor1"
-      class="hidden xl:block fixed w-[14px] h-[14px] bg-[#B5FBFF] rounded-full translate-x-[-50%] translate-y-[-50%] pointer-events-none z-50"
-    ></div>
-    <div
-      id="cursor2"
-      class="hidden xl:block fixed w-[52px] h-[52px] border-[#258287] border rounded-full translate-x-[-50%] translate-y-[-50%] duration-700 ease-out bg-transparent z-50 pointer-events-none"
-    ></div> -->
     <div class="w-full relative">
       <div
         class="absolute w-[250px] h-[250px] xl:w-[500px] 2xl:w-[700px] 2xl:h-[700px] xl:h-[500px] bg-blue-800 z-[-1] top-[5%] xl:top-[8%] left-[0%] xl:left-[5%] -translate-x-[0%] -translate-y-[50%] rounded-full blur-[64px] xl:blur-[186px] opacity-[1] animate-pulse rellax"
@@ -117,6 +108,14 @@
                   class="block py-2 pl-3 pr-4 font-normal text-white rounded md:bg-transparent md:p-0 cursor-none"
                   aria-current="page"
                   >Home</a
+                >
+              </li>
+              <li>
+                <a
+                  href="/about-us.html"
+                  class="block py-2 pl-3 pr-4 font-normal text-white rounded md:bg-transparent md:p-0 cursor-none"
+                  aria-current="page"
+                  >About Us</a
                 >
               </li>
               <li>
@@ -1010,9 +1009,8 @@
     <!--End of Tawk.to Script-->
 
     <script src="https://cdn.jsdelivr.net/npm/kursor@0.0.14/dist/kursor.js"></script>
-    <script src="src/js/blog-filter.js"></script>
-    <script src="src/js/pagination.js"></script>
-    <script src="./src/js/cursor1.js"></script>
+    <!-- <script src="src/js/blog-filter.js"></script> -->
+    <!-- <script src="src/js/pagination.js"></script> -->
     <script src="./src/js/scrollreveal.js"></script>
     <script src="./src/js/navbar.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.7.0/flowbite.min.js"></script>
