--- a/expertise.html
+++ b/expertise.html
@@ -40,16 +40,6 @@
   </head>
 
   <body>
-    <!-- Custom cursor -->
-    <!-- <div
-      id="cursor1"
-      class="hidden xl:block fixed w-[14px] h-[14px] bg-[#B5FBFF] rounded-full translate-x-[-50%] translate-y-[-50%] pointer-events-none z-50"
-    ></div>
-    <div
-      id="cursor2"
-      class="hidden xl:block fixed w-[52px] h-[52px] border-[#258287] border rounded-full translate-x-[-50%] translate-y-[-50%] duration-700 ease-out bg-transparent z-50 pointer-events-none"
-    ></div> -->
-
     <div class="relative w-full">
       <div
         class="absolute w-[250px] h-[250px] xl:w-[500px] 2xl:w-[700px] 2xl:h-[700px] xl:h-[500px] bg-blue-800 z-[-1] top-[45%] xl:top-[35%] left-[0%] xl:left-[15%] -translate-x-[0%] -translate-y-[50%] rounded-full blur-[96px] xl:blur-[156px] opacity-[1] animate-pulse rellax"
@@ -115,6 +105,14 @@
                   class="block py-2 pl-3 pr-4 font-normal text-white rounded md:bg-transparent md:p-0 cursor-none"
                   aria-current="page"
                   >Home</a
+                >
+              </li>
+              <li>
+                <a
+                  href="/about-us.html"
+                  class="block py-2 pl-3 pr-4 font-normal text-white rounded md:bg-transparent md:p-0 cursor-none"
+                  aria-current="page"
+                  >About Us</a
                 >
               </li>
               <li>
@@ -376,7 +374,7 @@
                   class="absolute w-full h-full left-0 top-0 z-[-1] bg-[url('https://images.unsplash.com/photo-1579869847557-1f67382cc158?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=50')] bg-cover bg-center"
                 ></div>
                 <span
-                  class="font-semibold font-outfit text-2xl xl:text-3xl text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] to-[#00B0FF] z-[1] whitespace-nowrap"
+                  class="font-semibold font-outfit text-3xl xl:text-3xl text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] to-[#00B0FF] z-[1] whitespace-nowrap"
                   >Social Media</span
                 >
                 <svg
@@ -452,7 +450,7 @@
                   class="absolute w-full h-full left-0 top-0 z-[-1] bg-[url('https://images.unsplash.com/photo-1607252650355-f7fd0460ccdb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=50')] bg-cover bg-center"
                 ></div>
                 <span
-                  class="font-semibold font-outfit text-3xl xl:text-3xl text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] to-[#00B0FF] z-[1] whitespace-nowrap"
+                  class="font-semibold font-outfit text-2xl xl:text-3xl text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] to-[#00B0FF] z-[1] whitespace-nowrap"
                   >Mobile Apps Development</span
                 >
                 <svg
@@ -697,10 +695,8 @@
     <!--End of Tawk.to Script-->
 
     <script src="https://cdn.jsdelivr.net/npm/kursor@0.0.14/dist/kursor.js"></script>
-    <script src="./src/js/cursor1.js"></script>
     <script src="./src/js/scrollreveal.js"></script>
     <script src="./src/js/navbar.js"></script>
-    <!-- <script src="./node_modules/flowbite/dist/flowbite.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.7.0/flowbite.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script>
 
