--- a/insight.html
+++ b/insight.html
@@ -31,15 +31,37 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.7.0/flowbite.min.css"
       rel="stylesheet"
     />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://unpkg.com/kursor/dist/kursor.css"
-    />
+    /> -->
     <link rel="stylesheet" href="./dist/output.css" />
     <title>Insight | Gambit Rojo</title>
   </head>
 
   <body>
+    <!-- Custom cursor -->
+    <div
+      id="cursor1"
+      class="hidden xl:block fixed w-[24px] h-[24px] rounded-none translate-x-[-50%] translate-y-[-50%] pointer-events-none z-[10000] bg-transparent"
+    >
+      <img
+        src="/src/assets/icons/cursor1.svg"
+        alt="cursor"
+        class="absolute top-[47%] left-[47%]"
+      />
+    </div>
+    <div
+      id="cursor2"
+      class="hidden xl:block fixed w-[28px] h-[28px] border-none translate-x-[0%] translate-y-[0%] duration-300 ease-out bg-transparent z-50 pointer-events-none"
+    >
+      <img
+        src="/src/assets/icons/cursor2.svg"
+        alt="cursor"
+        class="absolute top-[50%] left-[50%]"
+      />
+    </div>
+
     <div class="w-full relative">
       <div
         class="absolute w-[250px] h-[250px] xl:w-[500px] 2xl:w-[700px] 2xl:h-[700px] xl:h-[500px] bg-blue-800 z-[-1] top-[5%] xl:top-[8%] left-[0%] xl:left-[5%] -translate-x-[0%] -translate-y-[50%] rounded-full blur-[64px] xl:blur-[186px] opacity-[1] animate-pulse rellax"
@@ -134,9 +156,9 @@
               </li>
               <li>
                 <a
-                  href="/about-you.html"
+                  href="#"
                   class="block py-2 pl-3 pr-4 font-normal text-white rounded md:border-0 md:p-0 cursor-none"
-                  >About You</a
+                  >Career</a
                 >
               </li>
             </ul>
@@ -927,6 +949,72 @@
       </a>
     </section>
 
+    <!-- Sticky contact us -->
+    <div
+      class="w-[200px] h-14 fixed bottom-[45%] translate-y-[-50%] right-[-72px] bg-[#00B0FF] py-5 rotate-[-90deg] flex items-center"
+    >
+      <div class="relative overflow-hidden flex items-start">
+        <div
+          class="z-0 animate-marquee whitespace-nowrap flex gap-[36px]"
+        >
+          <p
+            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
+          >
+            Contact Us
+          </p>
+          <p
+            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
+          >
+            Contact Us
+          </p>
+          <p
+            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
+          >
+            Contact Us
+          </p>
+          <p
+            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
+          >
+            Contact Us
+          </p>
+          <p
+            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
+          >
+            Contact Us
+          </p>
+        </div>
+        <div
+          class="absolute top-0 z-0 animate-marquee2 whitespace-nowrap overflow-hidden flex gap-[36px]"
+        >
+          <p
+            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
+          >
+            Contact Us
+          </p>
+          <p
+            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
+          >
+            Contact Us
+          </p>
+          <p
+            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
+          >
+            Contact Us
+          </p>
+          <p
+            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
+          >
+            Contact Us
+          </p>
+          <p
+            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
+          >
+            Contact Us
+          </p>
+        </div>
+      </div>
+    </div>
+
     <!-- Footer goes here -->
     <footer class="w-full">
       <div
@@ -1008,11 +1096,12 @@
     </script>
     <!--End of Tawk.to Script-->
 
-    <script src="https://cdn.jsdelivr.net/npm/kursor@0.0.14/dist/kursor.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/kursor@0.0.14/dist/kursor.js"></script> -->
     <!-- <script src="src/js/blog-filter.js"></script> -->
     <!-- <script src="src/js/pagination.js"></script> -->
     <script src="./src/js/scrollreveal.js"></script>
     <script src="./src/js/navbar.js"></script>
+    <script src="./src/js/cursor1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.7.0/flowbite.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script>
 
@@ -1022,12 +1111,12 @@
       });
     </script>
 
-    <script>
+    <!-- <script>
       new kursor({
         type: 4,
         removeDefaultCursor: true,
         color: '#B5FBFF',
       });
-    </script>
+    </script> -->
   </body>
 </html>
